html-nginx-app/base/nginx-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service        
  namespace: nginx
  labels:
    app: nginx
    enabled: "true"
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/load-balancer-type: "Internal"
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx
    color: green             #  ✅ this is how blue/green switch happens
    enabled: "true"
  type: LoadBalancer
