html-nginx-app/base/blue-green-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: "gce"
    cloud.google.com/neg: '{"ingress": true}'
    networking.gke.io/v1beta1.FrontendConfig: "nginx-frontend-config"
    kubernetes.io/ingress.global-static-ip-name: "nginx-ingress-staticip"
spec:
  ingressClassName: gce
  tls:
    - hosts:
        - nginx-app.profit.net
      secretName: profit-tls
  rules:
    - host: nginx-app.profit.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service-blue    # Make sure this service exists with this name
                port:
                  number: 80
